--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "cp dist/index.html dist/404.html && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "vue": "^3.5.13",
