--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^3.5.13",
+    "vue-i18n": "^11.0.1",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
