--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "cd dist && cp index.html 404.html && cd .. && git subtree push --prefix dist origin gh-pages"
+    "deploy": "cp dist/index.html dist/404.html && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "vue": "^3.5.13",
